--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -21,15 +21,16 @@ sample_file: data/samples.tsv
 
 # Which samples from the samples_file should we execute the pipeline on?
 # Comment out this line or set it to a falsey value if you want to run all samples in the sample file
-# SAMP_NAMES: [molt4_chr1, jurkat_chr1]
+SAMP_NAMES: [molt4_chr1, jurkat_chr1]
 
 # The path to a reference genome
 # The BWA index files, samtools index file (.fa.fai), and samtools dictionary file (.dict) must be stored in the same directory
 # required!
 genome: data/hg38.chr1.fa
 
-# Directory in which to output all of the output files
-# required!
+# The path to the directory in which to place all of the output files
+# Defined relative to whatever directory you execute the snakemake command in
+# Defaults to "out" if this line is commented out or set to a falsey value
 out: out
 
 # Which callers do you want to run to find SNVs?
@@ -50,7 +51,7 @@ snp_callers: [gatk-snp, varscan-snp, vardict-snp]
 # a new model, run the classify subworkflow separately using the example
 # training data we provided. Make sure to set the appropriate callers in the
 # "subset_callers" config value of classify.yaml
-indel_callers: [gatk-indel, varscan-indel, illumina-manta, vardict-indel, pindel, illumina-strelka, breakca, delly]
+indel_callers: [gatk-indel, varscan-indel, vardict-indel, pindel, illumina-strelka]
 
 # A list of filtering expressions for filtering the sites before making variant predictions
 # A filtering expression consists of the following concatenated together:
@@ -59,11 +60,10 @@ indel_callers: [gatk-indel, varscan-indel, illumina-manta, vardict-indel, pindel
 #   - one of awk's comparison operators (the following are currently supported: >, <, ==)
 #   - a value to filter on
 # Comment out these lines to disable filtering
-# Note that your filters may have unattended consequences if 'fillna' (above) is not set to true
 snp_filter: ['gatk-snp~DP>10']
 indel_filter: ['gatk-indel~DP>10']
 
-# The path to a trained, ensemble classifier, which can be used for calling indels
+# The path to a trained, ensemble classifier, which can be used for calling SNVs
 # required!
 snp_model: data/snp.rda
 
