--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -15,7 +15,13 @@
 # Alternatively, if you don't have FASTQ files, but you have BAM files, each
 # row can have just two columns (where, again, each are separated by a tab):
 #       <unique_sample_name> <bam_path>
-# Note that if you provide a BAM file, it must have read group information.
+# If a BAM file is provided, PCR duplicates will not be removed as they usually
+# are. If you'd like to skip the peak calling step as well, you must provide a
+# third column:
+#       <unique_sample_name> <bam_path> <bed_path>
+# Note that if you provide a BAM file, it must have read group information and
+# no PCR duplicates. The BAM file must have a .bam file extension and the BED
+# file must have a .bed file extension.
 # this is a required input!
 sample_file: data/samples.tsv
 
@@ -35,6 +41,8 @@ out: out
 
 # Which callers do you want to run to find SNVs?
 # If you don't want to run the snp pipeline, set this to a falsey value or comment out the line
+# The order of the callers listed here will determine the order in which each
+# callers' ALT allele is considered for inclusion in the final VCF output.
 # If you decide to change the callers listed here, you should also make sure to
 # change the trained classification model (ie "snp_model" below), since the
 # model we provided in the example data only works with these callers. To create
@@ -45,6 +53,8 @@ snp_callers: [gatk-snp, varscan-snp, vardict-snp]
 
 # Which callers do you want to run to find indels?
 # If you don't want to run the indel pipeline, set this to a falsey value or comment out the line
+# The order of the callers listed here will determine the order in which each
+# callers' ALT allele is considered for inclusion in the final VCF output.
 # If you decide to change the callers listed here, you should also make sure to
 # change the trained classification model (ie "indel_model" below), since the
 # model we provided in the example data only works with these callers. To create
