--- a/envs/prepare.yml
+++ b/envs/prepare.yml
@@ -1,34 +1,35 @@
 channels:
-  - defaults
+  - conda-forge
+  - nodefaults
 dependencies:
-  - r-pbapply==1.4_2
-  - r-stringr==1.4.0
-  - r-readr==1.1.1
+  - conda-forge::r-pbapply==1.4_2
+  - conda-forge::r-stringr==1.4.0
+  - conda-forge::r-readr==1.1.1
   - bioconda::bioconductor-rsamtools==1.34.0
-  - gawk==5.1.0
-  - tabix==0.2.6
-  - bcftools==1.9=ha228f0b_4
+  - conda-forge::gawk==5.1.0
+  - bioconda::tabix==0.2.6
+  - bioconda::bcftools==1.9=ha228f0b_4
   - bioconda::delly==0.8.3
   - bioconda::bioconductor-bsgenome.hsapiens.ucsc.hg19==1.4.0
   - bioconda::bioconductor-biovizbase==1.30.1
-  - vcftools==0.1.16
+  - bioconda::vcftools==0.1.16
   - conda-forge::r-rmutil==1.1.4
-  - gatk4==4.1.7.0
-  - r-lattice==0.20_41
-  - r-reshape==0.8.8
-  - vardict-java==1.7.0
-  - manta==1.6.0
-  - bwa==0.7.17
-  - r-data.table==1.12.8
-  - r-plyr==1.8.4
-  - samtools==1.9=h8571acd_11
-  - strelka==2.9.10
+  - bioconda::gatk4==4.1.7.0
+  - conda-forge::r-lattice==0.20_41
+  - conda-forge::r-reshape==0.8.8
+  - bioconda::vardict-java==1.7.0
+  - bioconda::manta==1.6.0
+  - bioconda::bwa==0.7.17
+  - conda-forge::r-data.table==1.12.8
+  - conda-forge::r-plyr==1.8.4
+  - bioconda::samtools==1.9=h8571acd_11
+  - bioconda::strelka==2.9.10
   - bioconda::bioconductor-variantannotation==1.28.3
-  - pindel==0.2.5b9
-  - macs2==2.1.2
-  - r-dplyr==0.8.5
+  - bioconda::pindel==0.2.5b9
+  - bioconda::macs2==2.1.2
+  - conda-forge::r-dplyr==0.8.5
   - bioconda::bioconductor-genomicalignments==1.18.1
-  - bedtools==2.29.2
-  - varscan==2.4.4
+  - bioconda::bedtools==2.29.2
+  - bioconda::varscan==2.4.4
   - bioconda::bioconductor-rtracklayer==1.42.1
   - conda-forge::coreutils==8.31
