--- a/envs/prc.yml
+++ b/envs/prc.yml
@@ -1,11 +1,12 @@
 channels:
   - conda-forge
+  - nodefaults
 dependencies:
-  - numpy==1.18.5
-  - pandas==1.0.4
-  - scikit-learn==0.23.1
-  - matplotlib==3.1.2
-  - coreutils==8.31
+  - conda-forge::numpy==1.18.5
+  - conda-forge::pandas==1.0.4
+  - conda-forge::scikit-learn==0.23.1
+  - conda-forge::matplotlib==3.1.2
+  - conda-forge::coreutils==8.31
   - bioconda::pysam==0.15.3
   - bioconda::bcftools==1.10.2
-  - gawk==5.1.0
+  - conda-forge::gawk==5.1.0
