add sed, gzip, bash, and friends to the env files for reproducibility

--- a/envs/classify.yml
+++ b/envs/classify.yml
@@ -14,3 +14,7 @@ dependencies:
   - r-data.table==1.12.8
   - r-plyr==1.8.4
   - gawk==5.1.0
+  - conda-forge::coreutils==8.31
+  - conda-forge::sed==4.8
+  - conda-forge::bash==5.0.018
+  - conda-forge::gzip==1.10
